bugfix: Align the hero pictures

--- a/assets/hero-split.css
+++ b/assets/hero-split.css
@@ -168,7 +168,6 @@
 }
 
 
-
 #hero-split-section .wallpaper img {
     -o-object-fit: cover;
     object-fit: cover;
@@ -219,8 +218,10 @@
     height: 100%;
 }
 
-#hero-split-section .wallpaper-container .wallpaper:first-child{
-   aspect-ratio: 4/3
+#hero-split-section .wallpaper-container .wallpaper:first-child {
+    aspect-ratio: 4/3;
+    width: 100%;
+    height: 100%;
 }
 
 #hero-split-section .section-container.hero-split-features {
